<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.3.RELEASE</version>
	</parent>

	<groupId>no.nav.dolly-backend</groupId>
	<artifactId>dolly-backend</artifactId>
	<version>1.18.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>dolly-backend</name>
	<description>Applikasjon for oppretting av testpersoner</description>

    <distributionManagement>
        <repository>
            <id>github</id>
            <url>https://github.com/navikt/dolly-backend.git</url>
        </repository>
    </distributionManagement>

    <scm>
        <developerConnection>scm:git:git@github.com:navikt/dolly-backend.git</developerConnection>
        <connection>scm:git:git@github.com:navikt/dolly-backend.git</connection>
        <url>https://github.com/navikt/dolly-backend</url>
        <tag>HEAD</tag>
    </scm>

    <repositories>
        <repository>
            <id>github-package-registry-navikt</id>
            <url>https://maven.pkg.github.com/navikt/maven-release</url>
        </repository>
    </repositories>

    <modules>
        <module>dolly-backend-app</module>
        <module>dolly-backend-domain</module>
        <module>dolly-backend-app-local</module>
        <module>dolly-backend-app-nais</module>
    </modules>

    <properties>
        <application.name>dolly-backend</application.name>
        <application.version>${project.version}</application.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
        <spring-cloud.version>2.2.5.RELEASE</spring-cloud.version>
        <jdbc.ojdbc.version>19.7.0.0</jdbc.ojdbc.version>
        <orika.version>1.5.4</orika.version>
        <cxf.version>3.3.4</cxf.version>
        <ehcache-core.version>2.6.11</ehcache-core.version>
        <jettison.version>1.4.0</jettison.version>
        <logstash-logback-encoder.version>6.3</logstash-logback-encoder.version>
        <papertrailapp.version>1.0.0</papertrailapp.version>
        <jacoco.version>0.8.5</jacoco.version>
        <sonar-maven-plugin.version>3.7.0.1746</sonar-maven-plugin.version>
        <sonar.projectKey>navikt_dolly-backend</sonar.projectKey>
        <sonar.projectName>dolly-backend</sonar.projectName>
        <sonar.organization>navit</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <!--suppress UnresolvedMavenProperty Ligger som secret i github-->
        <sonar.login>${SONAR_LOGIN}</sonar.login>
        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
        <springdoc-openapi.version>1.4.7</springdoc-openapi.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-vault-config</artifactId>
            <version>${spring-cloud.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-contract-wiremock</artifactId>
            <version>${spring-cloud.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>

        <dependency>
            <groupId>net.sf.ehcache</groupId>
            <artifactId>ehcache-core</artifactId>
            <version>${ehcache-core.version}</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-logback-encoder.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-ui</artifactId>
                <version>${springdoc-openapi.version}</version>
            </dependency>

            <dependency>
                <groupId>com.oracle.database.jdbc</groupId>
                <artifactId>ojdbc8</artifactId>
                <version>${jdbc.ojdbc.version}</version>
            </dependency>

			<dependency>
				<groupId>ma.glasnost.orika</groupId>
				<artifactId>orika-core</artifactId>
				<version>${orika.version}</version>
			</dependency>

            <dependency>
                <groupId>org.codehaus.jettison</groupId>
                <artifactId>jettison</artifactId>
                <version>${jettison.version}</version>
            </dependency>
		</dependencies>
	</dependencyManagement>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>report</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
